--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,12 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/ride_or_pie" # the subpath of your site, e.g. /blog
 url: "vgxhc.github.io" # the base hostname & protocol for your site
-github_username:  jekyll
+github_username:  vgxhc
 
 # Build settings
-theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
