--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ url: vgxhc.github.io # the base hostname & protocol for your site
 github_username:  vgxhc
 
 # Build settings
-theme: jekyll-theme-midnight
+theme: minima
 plugins:
   - jekyll-feed
 
